added impersonater concept

--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/Details.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/Details.cshtml
@@ -70,6 +70,6 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
-    @Html.ActionLink("Go to screen", "RenderUserScreen", new { screenID = Model.id }) |
+    @Html.ActionLink("Show screen", "RenderUserScreen", new { screenID = Model.id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
