--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreens.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreens.cshtml
@@ -3,14 +3,14 @@
 <div class="panel-body" id="placecontainer" style="position:relative">
     <div class="row">
         <div class="col-lg-6">
-            <a href="@Model[0].ScreenUrl"><span class="badge">@Model[0].Discription</span></a>
+            <a href="@Model[0].ScreenUrl"><span class="label label-primary">@Model[0].Discription</span></a>
             <div class="intrinsic-container intrinsic-container-16x9">
                 <iframe src="@Model[0].ScreenUrl" allowfullscreen frameBorder="0"></iframe>
             </div>
         </div>
 
         <div class="col-lg-6">
-            <a href="@Model[1].ScreenUrl"><span class="badge">@Model[1].Discription</span></a>
+            <a href="@Model[1].ScreenUrl"><span  class="label label-primary">@Model[1].Discription</span></a>
             <div class="intrinsic-container intrinsic-container-16x9">
                 <iframe src="@Model[1].ScreenUrl" allowfullscreen frameBorder="0"></iframe>
             </div>
@@ -21,14 +21,14 @@
 
     <div class="row">
         <div class="col-lg-6">
-            <a href="@Model[2].ScreenUrl"><span class="badge">@Model[2].Discription</span></a>
+            <a href="@Model[2].ScreenUrl"><span class="label label-primary">@Model[2].Discription</span></a>
             <div class="intrinsic-container intrinsic-container-16x9">
                 <iframe src="@Model[2].ScreenUrl" allowfullscreen frameBorder="0"></iframe>
             </div>
         </div>
 
         <div class="col-lg-6">
-            <a href="@Model[3].ScreenUrl"><span class="badge">@Model[3].Discription</span></a>
+            <a href="@Model[3].ScreenUrl"><span  class="label label-primary">@Model[3].Discription</span></a>
             <div class="intrinsic-container intrinsic-container-16x9">
                 <iframe src="@Model[3].ScreenUrl" allowfullscreen frameBorder="0"></iframe>
             </div>
