--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -47,6 +47,10 @@
         </p>
 
         <p>
+            <a href="~/Gadata/EQpluginDefaultNGACWebgrid" class="btn btn-primary btn-sm">SupervisieHighDetail &raquo;</a>
+        </p>
+
+        <p>
             <a href="http://gensvw2107/cmactapp" class="btn btn-primary btn-sm">cmaCTapp &raquo;</a>
             Tool van IE om Cycle times te bekijken.
         </p>
