--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
@@ -1,6 +1,20 @@
 ﻿@model EqUiWebUi.Areas.user_management.Models.L_Screens
+@{
+    ViewBag.Title = Model.Discription;
+}
+
+
+@if (@HttpContext.Current.Session["Impersonating"].ToString() != "")
+    {
+    <div class="label" style="background:black;">
+        <div style="z-index: 2; position: absolute; top: 0px; left: 0px;">
+            <h6>Viewing As @HttpContext.Current.Session["Impersonating"]</h6>
+        </div>
+    </div>
+    }
+ 
 
 <body style="margin:0px;padding:0px">
-    <iframe  src="@Model.ScreenUrl" frameborder="0" style="overflow:hidden;overflow-x:hidden;height:150%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="150%" width="150%"></iframe>
+    <iframe src="@Model.ScreenUrl" frameborder="0" style="overflow:hidden;overflow-x:hidden;height:150%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="150%" width="150%"></iframe>
 </body>
 
