--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -97,6 +97,10 @@
             <a href="~/PDFjs/web/viewer.html?file=Q-Mapping Dashboard.pdf" class="btn btn-primary btn-sm">Qurt &raquo;</a>
             Q-Mapping Dashboard
         </p>
+        <p>
+            <a href="~/Gadata/BodyTrackWebgrid" class="btn btn-primary btn-sm">Bodytracking &raquo;</a>
+            Body tracking (robot data A LIJN 339 ONLY!)
+        </p>
     </div>
 </div>
 
