--- a/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/UserScreens/RenderUserScreen.cshtml
@@ -4,31 +4,31 @@
 }
 
 @*If you are 'impersonating' somebody else show it*@
-@if (@HttpContext.Current.Session["Impersonating"].ToString() != "")
+@if (@HttpContext.Current.Session["Impersonating"] != "")
 {
     <div class="label" style="background:black;">
-        <div style="z-index: 2; position: absolute; top: 0px; left: 0px;">
-            <h6>Viewing As @HttpContext.Current.Session["Impersonating"]</h6>
-        </div>
+            <div style="z-index: 2; position: absolute; top: 0px; left: 0px;">
+                <div class="label label-danger">
+                    You are impersonating!
+                    @HttpContext.Current.Session["Impersonating"]
+                </div>
+            </div>
     </div>
 }
 
-<!--page gets renderd in this iframe-->
-<body style="margin:0px;padding:0px">
-    <iframe id="UserScreenIframe" src="@Model.ScreenUrl" frameborder="0" style="overflow:hidden;overflow-x:hidden;height:150%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="150%" width="150%"></iframe>
-</body>
+    <!--page gets renderd in this iframe-->
+    <body style="margin:0px;padding:0px">
+        <iframe id="UserScreenIframe" src="@Model.ScreenUrl" frameborder="0" style="overflow:hidden;overflow-x:hidden;height:150%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="150%" width="150%"></iframe>
+    </body>
 
-<!--Modal for messages-->
-<div id="RenderUserScreenMessage" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-content">Loading....</div>
-</div>
+    <!--Modal for messages-->
+    <div id="RenderUserScreenMessage" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-content">Loading....</div>
+    </div>
 
     <div id="RenderUserMessageIframe" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-content">Loading....</div>
     </div>
-
-
-
 
     @section scripts{
         <script src="~/Scripts/jquery.signalR-2.2.2.js"></script>
