working on alert system

--- a/EqUiWebUi/Areas/Alert/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Home/Index.cshtml
@@ -15,4 +15,7 @@
     <div class="panel-body">
         <p><a href="~/Alert/triggers/index" class="btn btn-primary btn-sm">Triggers &raquo;</a>Alert triggers manager </p>
     </div>
+    <div class="panel-body">
+        <p><a href="~/Alert/home/ConfigHangfire" class="btn btn-primary btn-sm">configureHangfire &raquo;</a>configureHangfire </p>
+    </div>
 </div>
