--- a/EqUiWebUi/Views/Home/Settings.cshtml
+++ b/EqUiWebUi/Views/Home/Settings.cshtml
@@ -40,4 +40,20 @@
 
 <p></p>
 
+<div class="panel panel-danger">
+    <div class="panel-heading">
+        <h4 class="panel-title">Alerts</h4>
+        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+    </div>
+    <div class="panel-body">
+        <p><a href="~/Alert/c_triggers/index" class="btn btn-danger btn-sm">c_trigger &raquo;</a>Manage alert triggers</p>
+        <p><a href="~/Alert/h_alert/index" class="btn btn-danger btn-sm">h_alert &raquo;</a>Manager alerts</p>
+        <hr />
+        <p><a href="~/Alert/Alert/configureHangfire" class="btn btn-warning btn-sm">configureHangfire &raquo;</a>configureHangfire</p>
+        <hr />
+        <p><a href="~/Alert/Alert/Listalerts" class="btn btn-warning btn-sm">Listalerts &raquo;</a>Show list of alerts based on user</p>
+
+    </div>
+</div>
+
 <hr />
